header and footer no longer shrink to invisible on short height browser

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -133,7 +133,7 @@ footer{
     padding-left: 5px;
     text-decoration: none;
     color: white;
-    font-size:2vh;
+    font-size:18px;
     position: relative;
 }
 #index_nav_bar img{
@@ -177,7 +177,7 @@ footer{
 	padding: 2px;
 	margin: -8px;
     text-decoration: none;
-    font-size: 1.5vh;
+    font-size: 12px;
 	background-color: #333333;
     font-weight:800;
 	color: white;
@@ -270,12 +270,12 @@ footer{
 
 
     /*START OF INDEX*/
-    .index_quote {
-        font-size: 2vw;
-    }
-    #index_nav_bar a{
-        font-size: 2vw;
-    }
+    /*.index_quote {*/
+    /*    font-size: 2vw;*/
+    /*}*/
+    /*#index_nav_bar a{*/
+    /*    font-size: 2vw;*/
+    /*}*/
     /*END OF INDEX*/
 
 
@@ -304,6 +304,7 @@ footer{
     }
     #index_nav_bar a{
         color: black;
+        font-size: 14px;
     }
 
     /*END OF INDEX*/
